# gst-plugins-hack

./: README.md  meson.build  meson_options.txt
ext/sound/: gsthacksound.c  meson.build
gst-libs/gst/: meson.build
gst-libs/gst/hack/: meson.build
gst-libs/gst/hack/sound/: gsthacksoundplayer.c  gsthacksoundplayer.h  hacksound-prelude.h  meson.build
tests/examples/: meson.build
tests/examples/sound/: meson.build  simple_player.c
